update environment script

--- a/experiments/configs/hugging-face/160M.yml
+++ b/experiments/configs/hugging-face/160M.yml
@@ -22,6 +22,6 @@ train:
   learning_rate: 3e-4
   per_device_train_batch_size: 32
   per_device_eval_batch_size: 32
-  is_wandb: true
+  wandb_enabled: true
   wandb_project: LLCheM
   run_name: pipeline_test
