--- a/data/moses/meta.yaml
+++ b/data/moses/meta.yaml
@@ -16,7 +16,7 @@ links:
 - url: https://arxiv.org/abs/1811.12823
   description: Article about original dataset
 - url: https://pubs.acs.org/doi/abs/10.1021/acs.jcim.5b00559
-  description: Like to publication of associated dataset - zinc
+  description: Link to publication of associated dataset - zinc
 - url: https://github.com/molecularsets/moses
   description: Github repository concering the datset
 num_points: 1936962
