--- a/data/zinc/meta.yaml
+++ b/data/zinc/meta.yaml
@@ -13,7 +13,7 @@ links:
 - url: https://pubs.acs.org/doi/full/10.1021/acs.jcim.5b00559
   description: Article about original dataset
 - url: https://pubs.acs.org/doi/abs/10.1021/acscentsci.7b00572
-  description: Exemplary related article to zinc shown in tdc's website
+  description: Exemplary related article shown in tdc's website
 num_points: 249455
 bibtex:
 - "\n        @article{doi:10.1021/acs.jcim.5b00559,\n                author = {Sterling,\
