--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = gpt-neox
 	url = git@github.com:OpenBioML/gpt-neox.git
 	branch = main
+[submodule "lm-evaluation-harness"]
+	path = lm-evaluation-harness
+	url = https://github.com/EleutherAI/lm-evaluation-harness
