--- a/experiments/configs/hugging-face/160M.yml
+++ b/experiments/configs/hugging-face/160M.yml
@@ -20,7 +20,9 @@ trainer:
   output_dir: /fsx/proj-chemnlp/experiments/checkpoints/finetuned/160M
   num_train_epochs: 1
   learning_rate: 3e-4
-  logging_steps: 1
+  evaluation_strategy: steps
+  logging_steps: 5
+  eval_steps: 50
   save_steps: 500
   dataloader_num_workers: 4
   fp16: true
