--- a/data/moses/meta.yaml
+++ b/data/moses/meta.yaml
@@ -1,8 +1,8 @@
 name: moses
-description: "Molecular Sets (MOSES) is a benchmark platform for distribution learning\
-  \ based molecule generation. Within this benchmark, MOSES provides a cleaned dataset\
-  \ of molecules that are ideal of optimization. It is processed from the ZINC Clean\
-  \ Leads dataset.\n        "
+description: "Molecular Sets (MOSES) is a benchmark platform\n        for distribution\
+  \ learning based molecule generation.\n        Within this benchmark, MOSES provides\
+  \ a cleaned dataset of molecules that are ideal of optimization.\n        It is\
+  \ processed from the ZINC Clean Leads dataset.\n        "
 benchmarks:
 - name: TDC
   link: https://tdcommons.ai/
@@ -23,8 +23,8 @@ num_points: 1936962
 bibtex:
 - "@article{10.3389/fphar.2020.565644,\n  title={{M}olecular {S}ets ({MOSES}): {A}\
   \ {B}enchmarking {P}latform for {M}olecular {G}eneration {M}odels},\n  author={Polykovskiy,\
-  \ Daniil and Zhebrak, Alexander and Sanchez-Lengeling, Benjamin and Golovanov, Sergey\
-  \ and Tatanov, Oktai and Belyaev, Stanislav and Kurbanov, Rauf and Artamonov, Aleksey\
-  \ and Aladinskiy, Vladimir and Veselov, Mark and Kadurin, Artur and Johansson, Simon\
-  \ and  Chen, Hongming and Nikolenko, Sergey and Aspuru-Guzik, Alan and Zhavoronkov,\
+  \ Daniil and Zhebrak, Alexander and Sanchez-Lengeling, Benjamin and Golovanov,\n\
+  Sergey and Tatanov, Oktai and Belyaev, Stanislav and Kurbanov, Rauf and Artamonov,\n\
+  Aleksey and Aladinskiy, Vladimir and Veselov, Mark and Kadurin, Artur and Johansson,\n\
+  Simon and  Chen, Hongming and Nikolenko, Sergey and Aspuru-Guzik, Alan and Zhavoronkov,\
   \ Alex},\n  journal={Frontiers in Pharmacology},\n  year={2020}\n}\n            "
