--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = lm-eval2
 	url = git@github.com:OpenBioML/lm-eval2.git
 	branch = main
+[submodule "lm-eval1"]
+	path = lm-evaluation-harness
+	url = git@github.com:OpenBioML/lm-evaluation-harness.git
