--- a/experiments/configs/hugging-face/160M_full.yml
+++ b/experiments/configs/hugging-face/160M_full.yml
@@ -17,7 +17,7 @@ prompt_tuning:
 # Training configuration (TrainerArguments from HF)
 trainer:
   output_dir: /fsx/proj-chemnlp/experiments/checkpoints/finetuned/full_160M
-  num_train_epochs: 1.0
+  num_train_epochs: 0.1
   learning_rate: 3e-4
   evaluation_strategy: steps
   logging_steps: 5
@@ -35,3 +35,4 @@ wandb:
   project: LLCheM
   group: test
   name: test_160M_full # full_160M_v1
+  entity: chemnlp
