feat: nr_ahr_tox21 clean up

--- a/data/nr_ahr_tox21/meta.yaml
+++ b/data/nr_ahr_tox21/meta.yaml
@@ -5,16 +5,12 @@ description: |-
   response pathways.
 targets:
 - id: toxicity_NR-AhR
-  description: whether it toxic in a specific assay (1) or not toxic (0)
-  units: toxicity
-  type: categorical
+  description: whether it is toxic in a specific assay (1) or not (0)
+  units: null
+  type: boolean
   names:
+  - Tox21 NR-AhR toxicity
   - NR-AhR toxicity
-  - NR-AhR
-  - Tox21
-  - Tox21 NR-AhR
-  - NR-Aryl hydrocarbon receptor
-  - Aryl hydrocarbon receptor
   - aryl hydrocarbon receptor toxicity
 uris:
 - https://bioportal.bioontology.org/ontologies/NCIT?p=classes&conceptid=http%3A%2F%2Fncicb.nci.nih.gov%2Fxml%2Fowl%2FEVS%2FThesaurus.owl%23C17273
