feat: nr_aromatase_tox21 update units and type

--- a/data/nr_aromatase_tox21/meta.yaml
+++ b/data/nr_aromatase_tox21/meta.yaml
@@ -7,8 +7,8 @@ description: |-
 targets:
     - id: toxicity_NR-Aromatase
       description: whether it shows activity in the NR-Aromatase enzyme toxicity assay (1) or not (0)
-      units: toxicity
-      type: categorical
+      units:
+      type: boolean
       names:
           - Tox21 NR-Aromatase toxicity
           - NR-Aromatase enzyme toxicity
