--- a/data/nr_er_lbd_tox21/meta.yaml
+++ b/data/nr_er_lbd_tox21/meta.yaml
@@ -7,8 +7,8 @@ description: |-
 targets:
     - id: toxicity_NR-ER-LBD
       description: whether it shows activity in the NR-ER-LBD toxicity assay (1) or not (0)
-      units: toxicity
-      type: categorical
+      units:
+      type: boolean
       names:
           - Tox21 NR-ER-LBD toxicity
           - NR-ER-LBD toxicity
