feat: nr_er_tox21 update units and type

--- a/data/nr_er_tox21/meta.yaml
+++ b/data/nr_er_tox21/meta.yaml
@@ -7,8 +7,8 @@ description: |-
 targets:
     - id: toxicity_NR-ER
       description: whether it shows activity in the NR-ER toxicity assay (1) or not (0)
-      units: toxicity
-      type: categorical
+      units:
+      type: boolean
       names:
           - Tox21 R-ER toxicity
           - NR-ER toxicity
