feat: sr_atad5_tox21 update units and type

--- a/data/sr_atad5_tox21/meta.yaml
+++ b/data/sr_atad5_tox21/meta.yaml
@@ -7,8 +7,8 @@ description: |-
 targets:
     - id: toxicity_SR-ATAD5
       description: whether it shows activitiy in the SR-ATAD5 assay (1) or not (0)
-      units: toxicity
-      type: categorical
+      units:
+      type: boolean
       names:
           - SR-ATAD5 toxicity
           - Tox21 SR-Luciferase-tagged ATAD5 toxicity
