--- a/data/bioavailability_ma_et_al/meta.yaml
+++ b/data/bioavailability_ma_et_al/meta.yaml
@@ -25,10 +25,9 @@ identifiers:
     - id: compound_name
       type: Other
       names:
-          - drug name pubchem
-          - drug generic name
-          - drug chemical (generic) name
-          - chemical name
+          - compound name
+          - drug name
+          - generic drug name
       description: drug name
 license: CC BY 4.0
 links:
