feat: human_intestinal_absorption clean up 2

--- a/data/human_intestinal_absorption/meta.yaml
+++ b/data/human_intestinal_absorption/meta.yaml
@@ -28,9 +28,7 @@ identifiers:
       names:
           - compound name
           - drug name
-          - drug generic name
-          - drug chemical (generic) name
-          - chemical name
+          - generic drug name
       description: drug name
 license: CC BY 4.0
 links:
