feat: cyp2c9_substrate_carbonmangels clean up compound_name yaml

--- a/data/cyp2c9_substrate_carbonmangels/meta.yaml
+++ b/data/cyp2c9_substrate_carbonmangels/meta.yaml
@@ -27,11 +27,9 @@ identifiers:
     - id: compound_name
       type: Other
       names:
-          - drug bank name
-          - drug name pubchem
-          - drug generic name
-          - drug chemical (generic) name
-          - chemical name
+          - compound name
+          - drug name
+          - generic drug name
       description: drug name
 license: CC BY 4.0
 links:
