--- a/data/nlmchem/meta.yaml
+++ b/data/nlmchem/meta.yaml
@@ -24,7 +24,15 @@ links:
     - url: https://www.nature.com/articles/s41597-021-00875-1
       description: publication
 num_points: 2695
-bibtex: "\n        @article{Islamaj2021,\n        author = {Islamaj, R. and Leaman, R. and Kim, S. and Lu, Z.},\n        title = {NLM-Chem, a new resource\
-    \ for chemical entity recognition in PubMed full text literature},\n        journal = {Nature Scientific Data},\n        volume = {8},\n        number\
-    \ = {91},\n        year = {2021},\n        doi = {10.1038/s41597-021-00875-1},\n        url = {https://doi.org/10.1038/s41597-021-00875-1}\n       \
-    \ }\n        "
+bibtex:
+    - |-
+      @article{Islamaj2021,
+              author = {Islamaj, R. and Leaman, R. and Kim, S. and Lu, Z.},
+              title = {NLM-Chem, a new resource for chemical entity recognition in PubMed full text literature},
+              journal = {Nature Scientific Data},
+              volume = {8},
+              number = {91},
+              year = {2021},
+              doi = {10.1038/s41597-021-00875-1},
+              url = {https://doi.org/10.1038/s41597-021-00875-1}
+              }
