--- a/experiments/configs/hugging-face/eval_configs/eval_pipeline_config.yaml
+++ b/experiments/configs/hugging-face/eval_configs/eval_pipeline_config.yaml
@@ -1,6 +1,6 @@
 model: hf-causal
 model_args: "pretrained=/fsx/proj-chemnlp/experiments/checkpoints/finetuned/full_1b/checkpoint-final"
-# "pretrained=EleutherAI/pythia-1b"
+# model_args: "pretrained=EleutherAI/pythia-1b"
 tasks: "hendrycksTest-college_biology,hendrycksTest-college_chemistry,hendrycksTest-college_mathematics,hendrycksTest-college_physics,hendrycksTest-high_school_mathematics,hendrycksTest-high_school_biology,hendrycksTest-high_school_chemistry,hendrycksTest-high_school_physics"
 wandb_log: true
 wandb_project: LLCheM
