--- a/experiments/configs/hugging-face/3B_fine_tune.yml
+++ b/experiments/configs/hugging-face/3B_fine_tune.yml
@@ -28,7 +28,7 @@ trainer:
   per_device_train_batch_size: 1
   per_device_eval_batch_size: 1
   gradient_checkpointing: True
-  deepspeed: deepspeed_offload_S3.json
+  deepspeed_config: deepspeed_offload_S3.json
 
 # Logging configuration (WandB init arguments)
 wandb:
