feat: update new names setup for serine_threonine_kinase_33_butkiewicz

--- a/data/serine_threonine_kinase_33_butkiewicz/meta.yaml
+++ b/data/serine_threonine_kinase_33_butkiewicz/meta.yaml
@@ -9,12 +9,13 @@ description: |-
     compounds.
 targets:
     - id: activity_serine_threonine_kinase33
-      description: whether it is active against serine threonine kinase 33 receptor (1) or not (0).
+      description: whether it is active against the serine threonine kinase 33 receptor (1) or not (0).
       units:
       type: boolean
       names:
-          - inhibits the activity of the serine/threonine kinase, STK3
-          - a serine/threonine kinase, STK3 inhibitor
+          - noun: a serine/threonine kinase, STK3 inhibitor
+          - gerund: inhibiting the activity of the serine/threonine kinase, STK3
+          - adjective: active against the serine threonine kinase 33 receptor
       pubchem_aids:
           - 2661
           - 2821
